--- a/src/navbar2/navbar2.css
+++ b/src/navbar2/navbar2.css
@@ -24,11 +24,15 @@
 }
 
 .navbar2menulist{
+    height: 30px;
     margin-right: 40px;
     font-size: 20px;
     cursor: pointer;
     font-weight: 150;
     padding: 7px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .navbar2Logo{
